<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".FragmentLocalizacao">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLatitudeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputLatitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/latitude" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLongitudeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputLatitudeLayout"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputLongitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/longitude" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSetLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@color/verde"
                android:textColor="@color/texto"
                android:text="@string/localizar"
                />

            <Switch
                android:id="@+id/switchTravaMapa"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/travar_mapa"
                android:textSize="18sp" />

        </LinearLayout>

        <org.osmdroid.views.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/tvDadosAtuais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/dados_atuais" />

        <TextView
            android:id="@+id/editLatitudeAtual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:enabled="false"
            android:hint="@string/latitude_atual" />

        <TextView
            android:id="@+id/editLongitudeAtual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:enabled="false"
            android:hint="@string/longitude_atual" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSair"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="@color/vermelho"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:text="@string/fechar" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnProximaTela"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="5dp"
                android:background="@color/azul"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:text="@string/pr_xima_tela" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>